--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,18 +7,21 @@
     <title>Contoh Index Baru</title>
 </head>
 <body>
-    <div class="container mx-auto">
-        <h1 class="text-2xl font-bold mt-10">Contoh Index Baru</h1>
+    <div class="container mx-auto p-5 border-2 border-gray-300 rounded-2xl mt-10">
+        <h1 class="text-2xl font-bold mt-10 text-center">Contoh Index Baru</h1>
         <p>Ini adalah contoh halaman index baru.</p>
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos.
         </p>
         
-        <h2 class="text-lg font-bold mt-10"></h2>List Buku yang bisa dibaca :</h2>
+        <h2 class="text-xl font-bold mt-10">List Buku yang bisa dibaca :</h2>
         <ul>
             <li th:each="book : ${books}">
                 <a th:href="@{/books/{id}(id=${book.id})}">
-                    <span th:text="${book.title}"></span>
+                    Judul : <span th:text="${book.title}"></span>
+                    <br>Author : <span th:text="${book.author}"></span>
+                    <br>Genre : <span th:text="${book.genre}"></span>
+                    <br>Price : <span th:text="${book.price}"></span>
                 </a>
             </li>
         </ul>
