--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <title>Contoh Index Baru</title>
-</head>
+<html xmlns:th="http://www.thymeleaf.org"
+      th:replace="~{layout/base :: layout(~{::body}, 'About Us')}">
 <body>
-    <div class="container mx-auto p-5 border-2 border-gray-300 rounded-2xl mt-10">
-        <h3 class="font-bold text-2xl">About Us</h3>
-        <p class="mt-5">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae beatae quas labore, dolore quibusdam natus blanditiis laborum ea voluptate? Expedita sunt ut in quia omnis facilis ea minima? Sapiente, porro?
-        </p>
+<div th:fragment="body">
+    <div th:replace="~{section/title :: section-title('About Us', 'Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos.')}"></div>
+
+    <!-- content about us -->
+    <div class="container mx-auto flex flex-col gap-4">
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-4 max-w-[765px] mx-auto">
+            <div class="bg-white relative -top-3 rounded-lg shadow-md p-4">
+                <h3 class="text-2xl text-[#005C53] font-bold">Our Mission</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos.
+                </p>
+            </div>
+            <div class="bg-white relative top-3 rounded-lg shadow-md p-4">
+                <h3 class="text-2xl text-[#005C53] font-bold">Our Vision</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quos.
+                </p>
+            </div>
+        </div>
     </div>
+</div>
 </body>
 </html>
