--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -16,7 +16,7 @@
         <div class="nav-links flex gap-4 items-center">
             <a th:href="@{/}">Home</a>
             <a th:href="@{/about}">About</a>
-            <a th:href="@{/contact}">Contact</a>
+            <a th:href="@{/member}">Member</a>
         </div>
     </div>
 </header>
